--- a/assets/sass/global/_variables.scss
+++ b/assets/sass/global/_variables.scss
@@ -1,8 +1,8 @@
 
 //== Template Main Color
 $color-white : #fff;
-
 $color-primary: #0d6efd;
+$color-primary-dark: #080C24;
 
 //== social media colors
 $facebook: #3b5999;
