--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -60,4 +60,4 @@ Version: 1.0.0
 @import "sections/_widgets";
 // @import "sections/_blog";
 // @import "sections/_sectionbg";
-// @import "sections/_footer";
+@import "sections/_footer";
