--- a/assets/sass/sections/_section.scss
+++ b/assets/sass/sections/_section.scss
@@ -12,7 +12,7 @@ main {
                 color: $color-white;
                 background-color: $color-primary;
                 &.pill-white{
-                    color: $color-primary;
+                    color: $color-primary-dark;
                     background-color: $color-white;
 
                 }
@@ -61,6 +61,12 @@ main {
 				.desc {
 					padding-bottom: 1rem;
 					border-bottom: 1px solid rgba($color: #000000, $alpha: 0.4);
+					.read-more{
+						&.collapsed{
+							display: none;
+							height: 0;
+						}
+					}
 				}
 				.cta {
 					.persona {
@@ -70,11 +76,30 @@ main {
 			}
 		}
         &#services{
-            background: linear-gradient(0deg, $color-primary 0%, $color-primary 30%, transparent 30%, transparent 100%);
+            background: 
+			linear-gradient(0deg, $color-primary-dark 0%, $color-primary-dark 30%, transparent 30%, transparent 100%),
+			repeating-linear-gradient(-45deg, rgba(0, 0, 0, 0.1) 0, rgba(0, 0, 0, 0.1) 1px, transparent 0, transparent 50%);
+			background-size: cover,10px 10px;
+			background-repeat: repeat;
+        }
+        &#testimonials{
+			.testimonial-slider{
+				.testimonial-item{
+					filter: grayscale(1);
+					&:hover{
+						filter: grayscale(0);
+					}
+				}
+			}
+        }
+        &#team{
         }
         &#why-us{
-            background: linear-gradient(0deg, transparent 0%, transparent 20%, $color-primary 20%, $color-primary 100%);
-            color: $color-white;
+            background: linear-gradient(0deg, transparent 0%, transparent 30%, rgba($color-primary-dark, 0.8) 30%, rgba($color-primary-dark, 0.8) 100%);
+			color: $color-white;
+            h2{
+				color: $color-white;
+			}
         }
 	}
 }
