--- a/assets/sass/sections/_widgets.scss
+++ b/assets/sass/sections/_widgets.scss
@@ -86,7 +86,7 @@
 	}
 	.card-body {
 		position: relative;
-        padding-top: 2.5rem;
+		padding-top: 2.5rem;
 		.icon {
 			position: absolute;
 			right: 10%;
@@ -97,33 +97,103 @@
 			background-color: $color-white;
 			border: 0.5rem solid $color-primary;
 		}
-        h5{
-            font-weight: 600;
-            text-transform: uppercase;
-        }
-        .card-footer {
-            text-align: left;
-            background: none;
-            padding: 1rem 0.2rem;
-            padding-bottom: 0;
-        }
+		h5 {
+			font-weight: 600;
+			text-transform: uppercase;
+		}
+		.card-footer {
+			text-align: left;
+			background: none;
+			padding: 1rem 0.2rem;
+			padding-bottom: 0;
+		}
 	}
 }
 
-
-.widget-pointers_with_icon{
-    .point{
-        align-items: center;
-        margin-bottom: 1.5rem;
-        .icon{
-            height: 3rem;
-            aspect-ratio: 1;
-            border-radius: 50%;
-            background-color: $color-white;
-        }
-    }
+.widget-pointers_with_icon {
+	.point {
+		align-items: center;
+		margin-bottom: 1.5rem;
+		.icon {
+			height: 3rem;
+			aspect-ratio: 1;
+			border-radius: 50%;
+			background-color: $color-white;
+			position: relative;
+			z-index: 1;
+			&::after{
+				content: '';
+				z-index: 0;
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				aspect-ratio: 1;
+				border: 1px solid white;
+				border-radius: 50%;
+				top: 0;
+				left: -0.5rem;
+			}
+		}
+		.text{
+			font-weight: 600;
+		}
+	}
 }
 
+.widget-counter {
+	padding: 1rem;
+	border-top: 5px solid $color-primary;
+	background: repeating-linear-gradient(
+			-45deg,
+			rgba(255, 255, 255, 0.1) 0,
+			rgba(255, 255, 255, 0.1) 1px,
+			transparent 0,
+			transparent 50%
+		),
+		$color-primary-dark;
+	background-size: 10px 10px, cover;
+	background-repeat: repeat;
+	.widget-counter-element {
+		padding: 1rem;
+		padding-right: 1.5rem;
+		*{
+			color: $color-white;
+		}
+		h3{
+			margin: 0;
+			color: $color-primary;
+			span{
+				color: $color-primary;
+			}
+		}
+		h4{
+			font-size: 1.3rem;
+			text-transform: uppercase;
+		}
+		p{
+		}
+		&:not(:last-of-type) {
+			border-right: 3px solid $color-primary;
+		}
+	}
+}
+
+.widget-scroll_to{
+	position: fixed;
+	z-index: 9999;
+	bottom: 1rem;
+	right: 1rem;
+	width: 3rem;
+	height: 3rem;
+	cursor: pointer;
+	border-radius: 50%;
+	border: 5px solid $color-primary;
+	img{
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
 
 .widget-signature {
 	img {
