--- a/assets/sass/global/_variables.scss
+++ b/assets/sass/global/_variables.scss
@@ -1,8 +1,14 @@
 
 //== Template Main Color
-$color-white : #fff;
+$color-white : #f0f0f0;
+$color-black : #04080f;
 $color-primary: #0d6efd;
 $color-primary-dark: #080C24;
+
+$color-ochre: #d79141;
+$color-ochre-light: #fcc47a;
+$color-pastel-blue: #546ca1;
+$color-pastel-earth: #6c5050;
 
 //== social media colors
 $facebook: #3b5999;
