--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -42,9 +42,9 @@ Version: 1.0.0
 
 //== Global Design
 // @import "global/_mixins";
+@import "global/_fonts";
 @import "global/_variables";
 @import "global/_global";
-// @import "global/_common";
 // @import "global/_animate";
 
 
