--- a/assets/sass/sections/_section.scss
+++ b/assets/sass/sections/_section.scss
@@ -138,7 +138,39 @@ main {
 				padding: calc(max(5%, 1rem)) 0;
 				padding-top: calc(max(7%, 1.5rem));
 				min-height: 80vh;
-				background-color: rgba($color-primary-dark, 0.5);
+				background-color: rgba($color-primary-dark, 0.8);
+				.contact-footer {
+					*{
+						color: $color-white;
+					}
+					padding: 1.5rem 0;
+					.cf-item {
+						padding: 1rem;
+						h3 {
+							text-transform: uppercase;
+							font-size: max(1.5rem, 1vw);
+						}
+						.icon{
+							width: 5rem;
+							aspect-ratio: 1;
+							padding: 0.25rem;
+							display: grid;
+							place-items: center;
+							background-color: $color-primary;
+							position: relative;
+							border-radius: 0.25rem;
+							box-shadow: 0.5rem 0.5rem 0 0px rgba($color: $color-primary, $alpha: 0.3);
+							margin-bottom: 1rem;
+							// &::after{
+							// 	content: '';
+							// 	width: 100%;
+							// 	height: 100%;
+							// 	background-color: rgba($color: $color-primary, $alpha: 0.3);
+							// 	position: absolute;
+							// }
+						}
+					}
+				}
 			}
 		}
 		&#team {
