--- a/assets/sass/sections/_widgets.scss
+++ b/assets/sass/sections/_widgets.scss
@@ -7,6 +7,10 @@ $colors: (
 	"dark": $color-primary-dark,
 );
 
+.bg-primary-translucent{
+	background-color: rgba($color: $color-primary, $alpha: 0.2);
+}
+
 .btn,
 .btn-lg {
 	border: none;
@@ -75,60 +79,58 @@ $colors: (
 }
 
 .widget-service-card {
-	@mixin bg_normal($url) {
-		background: url("../../assets/media/images/banner/3.png"),
-			rgba($color-primary-dark, $alpha: 0.99);
-		background-size: cover;
-		background-blend-mode: soft-light;
+	position: relative;
+	border-radius: 0.25rem;
+	margin: 2rem 0;
+	border: none;
+	box-shadow: 2px 4px 10px 0 rgba($color: #000000, $alpha: 0.2);
+	*{
+		color: $color-primary-dark
 	}
-	@mixin bg_hover($url) {
-		background: url("../../assets/media/images/banner/3.png"),
-			rgba($color-primary-dark, $alpha: 0.6);
-		background-size: cover;
-		background-blend-mode: soft-light;
-	}
-	border-radius: 1rem;
-	&.freight-service {
-		@include bg_normal("../../assets/media/images/banner/3.png");
-		&:hover {
-			@include bg_hover("../../assets/media/images/banner/3.png");
-		}
-	}
-	&.customs-clearance {
-		@include bg_normal("../../assets/media/images/banner/3.png");
-		&:hover {
-			@include bg_hover("../../assets/media/images/banner/3.png");
-		}
-	}
-	* {
-		color: $color-white;
+	.icon {
+		position: absolute;
+		top: -2.5rem;
+		left: 50%;
+		transform: translateX(-50%);
+		width: 5rem;
+		aspect-ratio: 1;
+		border-radius: 50%;
+		background-color: $color-white;
+		border: 0.5rem solid $color-primary;
+		margin-bottom: 1rem;
 	}
 	.card-body {
 		background-color: transparent;
 		border: none;
-		.icon {
-			width: 4rem;
-			aspect-ratio: 1;
-			border-radius: 50%;
-			background-color: $color-white;
-			border: 0.5rem solid $color-primary;
-			margin-bottom: 1rem;
-		}
-		h5 {
+		padding: 2rem;
+		padding-top: 3rem;
+		h4 {
 			font-weight: 600;
 			text-transform: uppercase;
-		}
-		.card-footer {
-			text-align: left;
-			background: none;
-			padding: 1rem 0.2rem;
-			padding-bottom: 0;
+			text-align: center;
 		}
 	}
 }
 
 .widget-glassy-card {
 	background: rgba($color: $color-white, $alpha: 0.1);
+	border-radius: 16px;
+	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(10px);
+	border: none;
+	// border: 1px solid rgba($color: $color-white, $alpha: 0.3);
+	.card-header {
+		border-bottom: none;
+		background-color: transparent;
+		padding: 1rem 1rem 0;
+		* {
+			color: $color-white;
+		}
+	}
+}
+
+.widget-glassy-card-black {
+	background: rgba($color: $color-primary-dark, $alpha: 0.5);
 	border-radius: 16px;
 	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 	backdrop-filter: blur(10px);
