--- a/assets/sass/sections/_section.scss
+++ b/assets/sass/sections/_section.scss
@@ -27,6 +27,7 @@ main {
 			min-height: 80vh;
 		}
 		&#about-us {
+			padding: 2rem 0;
 			.media-content {
 				position: relative;
 				.img-overlap {
@@ -84,6 +85,15 @@ main {
 			);
 			background-size: cover;
 			background-repeat: repeat;
+
+			.swiper .swiper-wrapper{
+				flex-direction: row;
+				gap: 1rem;
+				padding: 1rem 0;
+				.swiper-slide{
+					margin: 0 !important;
+				}
+			}
 		}
 		&#testimonials {
 			min-height: fit-content;
@@ -197,6 +207,18 @@ main {
 		&.gandhi-quote {
 			min-height: fit-content;
 			padding: 2rem 0;
+			.thumbnail-rounded{
+				width: 100%;
+				aspect-ratio: 1;
+				border-radius: 0.5rem;
+				overflow: hidden;
+				img{
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+					object-position: top;
+				}
+			}
 		}
 	}
 }
