--- a/assets/sass/sections/_widgets.scss
+++ b/assets/sass/sections/_widgets.scss
@@ -104,6 +104,7 @@ $colors: (
 		border: none;
 		padding: 2rem;
 		padding-top: 3rem;
+		min-height: 400px;
 		h4 {
 			font-weight: 600;
 			text-transform: uppercase;
