--- a/assets/sass/sections/_widgets.scss
+++ b/assets/sass/sections/_widgets.scss
@@ -159,6 +159,7 @@ $colors: (
 		aspect-ratio: 1;
 		background-color: $color-white;
 		border-radius: 50%;
+		overflow: hidden;
 	}
 	.card-header {
 		background: transparent;
