--- a/assets/sass/global/_global.scss
+++ b/assets/sass/global/_global.scss
@@ -1,5 +1,5 @@
 :root {
-    --main-color: #FA4318;
+    --main-color: $color-primary;
     --heading-color: #080C24;
     --paragraph-color: #565969;
     // --body-font: 'Public Sans', sans-serif;
