--- a/assets/sass/sections/_widgets.scss
+++ b/assets/sass/sections/_widgets.scss
@@ -95,7 +95,9 @@ $colors: (
 		width: 5rem;
 		aspect-ratio: 1;
 		border-radius: 50%;
-		background-color: $color-white;
+		background: url("../media/icons/sprite-black.png"), $color-white;
+		background-repeat: no-repeat;
+		background-size: 200%;
 		border: 0.5rem solid $color-primary;
 		margin-bottom: 1rem;
 	}
@@ -170,7 +172,8 @@ $colors: (
 			margin-bottom: 0;
 			line-height: 1;
 		}
-		h3,p{
+		h3,
+		p {
 			width: fit-content;
 		}
 		h3 {
@@ -215,21 +218,9 @@ $colors: (
 			height: 3rem;
 			aspect-ratio: 1;
 			border-radius: 50%;
-			background-color: $color-white;
-			position: relative;
-			z-index: 1;
-			&::after {
-				content: "";
-				z-index: 0;
-				position: absolute;
-				width: 100%;
-				height: 100%;
-				aspect-ratio: 1;
-				border: 1px solid white;
-				border-radius: 50%;
-				top: 0;
-				left: -0.5rem;
-			}
+			background: url("../media/icons/sprite-black.png"), $color-white;
+			background-repeat: no-repeat;
+			background-size: 200%;
 		}
 		.text {
 			font-weight: 600;
