--- a/assets/sass/sections/_section.scss
+++ b/assets/sass/sections/_section.scss
@@ -58,6 +58,20 @@ main {
 					box-shadow: -8px 8px 10px 2px rgba($color: #000000, $alpha: 0.1);
 				}
 			}
+			.quote {
+				blockquote {
+					font-size: calc(max(4vw, 3rem));
+					line-height: 0.9;
+					text-transform: uppercase;
+					font-family: "Oswald", sans-serif;
+					font-weight: 500;
+					* {
+						text-transform: uppercase;
+						font-family: "Oswald", sans-serif;
+						font-weight: 500;
+					}
+				}
+			}
 			.text-content {
 				.desc {
 					padding-bottom: 1rem;
@@ -103,11 +117,11 @@ main {
 				background-color: rgba($color-primary-dark, 0.8);
 				background-size: cover;
 				background-repeat: repeat;
-				.title{
-					h2{
+				.title {
+					h2 {
 						color: $color-white;
 					}
-					p{
+					p {
 						color: $color-white;
 					}
 				}
@@ -143,19 +157,20 @@ main {
 				// }
 			}
 		}
-		&.map-section{
+		&.map-section {
 			padding-bottom: 0;
 			padding-top: 3rem;
-			.media-content{
-				.svg-map{
-					path{
+			.media-content {
+				.svg-map {
+					path {
 						fill: rgba($color-primary, 0.2);
 					}
 				}
 			}
-			.text-content{
-				aside{
-					h3,p{
+			.text-content {
+				aside {
+					h3,
+					p {
 						margin: 0;
 					}
 				}
