--- a/assets/sass/sections/_widgets.scss
+++ b/assets/sass/sections/_widgets.scss
@@ -224,6 +224,22 @@ $colors: (
 	}
 }
 
+.widget-teams-slider{
+	.swiper-slide{
+		.media-content{
+			width: 100%;
+			aspect-ratio: 1.3;
+			overflow: hidden;
+			img{
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				object-position: top;
+			}
+		}
+	}
+}
+
 .widget-glassy-form {
 	background-color: transparent;
 	.form-control {
