--- a/assets/sass/global/_fonts.scss
+++ b/assets/sass/global/_fonts.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400&family=Oswald:wght@400;500;600;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 @font-face {
     font-family: "Robinson Regular 400";
     font-weight: 400;
