--- a/assets/sass/global/_variables.scss
+++ b/assets/sass/global/_variables.scss
@@ -4,6 +4,7 @@ $color-white : #f0f0f0;
 $color-black : #04080f;
 $color-primary: #0d6efd;
 $color-primary-dark: #080C24;
+$color-red: #eb323b;
 
 $color-ochre: #d79141;
 $color-ochre-light: #fcc47a;
