--- a/assets/sass/sections/_navbar.scss
+++ b/assets/sass/sections/_navbar.scss
@@ -41,7 +41,7 @@ nav.navbar {
 		// border: 1px solid $color-white;
 		width: 100%;
 		margin: 0 1rem;
-		width: calc(100% - 2rem);
+		width: 15rem;
 		height: calc(80vh - 100px);
 		position: fixed;
 		top: 100px;
