--- a/assets/sass/sections/_banner.scss
+++ b/assets/sass/sections/_banner.scss
@@ -11,18 +11,62 @@
 		left: 5rem;
 	}
 	.swiper-slide {
-		background: linear-gradient(
-				-45deg,
-				transparent 50%,
-				rgba($color-pastel-blue, 0.5) 50%,
-				rgba($color-pastel-blue, 0.5) 75%,
-				transparent 75%,
-				transparent 100%
-			),
-			linear-gradient(90deg, $color-black 0%, transparent 100%),
-			url("../../assets/media/images/banner/3.png");
-		background-size: cover;
-		background-position-x: 65%;
+		&:nth-child(1) {
+			background: linear-gradient(
+					-45deg,
+					transparent 50%,
+					rgba($color-pastel-blue, 0.5) 50%,
+					rgba($color-pastel-blue, 0.5) 75%,
+					transparent 75%,
+					transparent 100%
+				),
+				linear-gradient(90deg, $color-black 0%, transparent 100%),
+				url("../../assets/media/images/banner/3.png");
+			background-size: cover;
+			background-position-x: 65%;
+		}
+		&:nth-child(2) {
+			background: linear-gradient(
+					-45deg,
+					transparent 50%,
+					rgba($color-pastel-blue, 0.5) 50%,
+					rgba($color-pastel-blue, 0.5) 75%,
+					transparent 75%,
+					transparent 100%
+				),
+				linear-gradient(90deg, $color-black 0%, transparent 100%), 
+				url("../../assets/media/images/banner/4.png");
+			background-size: cover;
+			background-position-x: 65%;
+		}
+		&:nth-child(3) {
+			background: linear-gradient(
+					-45deg,
+					transparent 50%,
+					rgba($color-pastel-blue, 0.5) 50%,
+					rgba($color-pastel-blue, 0.5) 75%,
+					transparent 75%,
+					transparent 100%
+				),
+				linear-gradient(90deg, $color-black 0%, transparent 100%),
+				url("../../assets/media/images/banner/5.png");
+			background-size: cover;
+			background-position-x: 65%;
+		}
+		&:nth-child(4) {
+			background: linear-gradient(
+					-45deg,
+					transparent 50%,
+					rgba($color-pastel-blue, 0.5) 50%,
+					rgba($color-pastel-blue, 0.5) 75%,
+					transparent 75%,
+					transparent 100%
+				),
+				linear-gradient(90deg, $color-black 0%, transparent 100%),
+				url("../../assets/media/images/banner/6.png");
+			background-size: cover;
+			background-position-x: 65%;
+		}
 		&.swiper-slide-active {
 			.slide-content .title h2,
 			.slide-content .desc p {
