--- a/assets/sass/sections/_banner.scss
+++ b/assets/sass/sections/_banner.scss
@@ -11,6 +11,18 @@
 		left: 5rem;
 	}
 	.swiper-slide {
+		background: linear-gradient(
+				-45deg,
+				transparent 50%,
+				rgba($color-pastel-blue, 0.5) 50%,
+				rgba($color-pastel-blue, 0.5) 75%,
+				transparent 75%,
+				transparent 100%
+			),
+			linear-gradient(90deg, $color-black 0%, transparent 100%),
+			url("../../assets/media/images/banner/3.png");
+		background-size: cover;
+		background-position-x: 65%;
 		&.slide-1 {
 			background: linear-gradient(
 					-45deg,
@@ -34,7 +46,7 @@
 					transparent 75%,
 					transparent 100%
 				),
-				linear-gradient(90deg, $color-black 0%, transparent 100%), 
+				linear-gradient(90deg, $color-black 0%, transparent 100%),
 				url("../../assets/media/images/banner/4.png");
 			background-size: cover;
 			background-position-x: 65%;
