--- a/assets/sass/sections/_widgets.scss
+++ b/assets/sass/sections/_widgets.scss
@@ -26,8 +26,8 @@ $colors: (
 .quote {
 	&.quote-xl {
 		blockquote {
-			font-size: calc(max(6vw, 3rem));
-			line-height: 1;
+			font-size: calc(max(5vw, 3rem));
+			line-height: 1.3;
 			font-weight: 500;
 			text-transform: capitalize;
 		}
@@ -211,6 +211,12 @@ $colors: (
 	border: none;
 	background: none;
 	position: relative;
+	@media screen and (min-width: 1024px) {
+		&.relative-top {
+			position: relative;
+			top: -7rem;
+		}
+	}
 	.image {
 		position: absolute;
 		top: 5%;
