Vivek Sir Changes

--- a/assets/sass/sections/_section.scss
+++ b/assets/sass/sections/_section.scss
@@ -105,6 +105,7 @@ main {
 			}
 			.swiper{
 				.swiper-wrapper{
+					align-items: center;
 					transition-timing-function: linear;
 				}
 			}
