Changes Without Why Choose Us

--- a/assets/sass/sections/_banner.scss
+++ b/assets/sass/sections/_banner.scss
@@ -63,7 +63,7 @@
 					transparent 100%
 				),
 				linear-gradient(90deg, $color-black 0%, transparent 100%),
-				url("../../assets/media/images/banner/3.png");
+				url("../../assets/media/images/banner/8.jpg");
 			background-size: cover;
 			background-position-x: 65%;
 		}
